Remove dotenv-cli

--- a/package.json
+++ b/package.json
@@ -16,27 +16,27 @@
     "docker:prod:clean": "docker-compose -f src/docker/docker-compose.prod.yml down -v",
     "docker:prod:rebuild": "DOCKER_BUILDKIT=1 COMPOSE_DOCKER_CLI_BUILD=1 docker-compose -f src/docker/docker-compose.prod.yml build app_prod && docker-compose -f src/docker/docker-compose.prod.yml up -d app_prod",
     "predev": "pnpm prisma:generate && pnpm migrate:dev",
-    "dev": "dotenv -e .env.local -- concurrently --color --prefix-colors \"blue.bold,magenta.bold,green.bold,yellow.bold,cyan.bold\" npm:dev:*",
+    "dev": "concurrently --color --prefix-colors \"blue.bold,magenta.bold,green.bold,yellow.bold,cyan.bold\" npm:dev:*",
     "dev:next": "next dev --turbo",
-    "dev:prisma": "dotenv -e .env.local -- prisma generate --schema=src/prisma/schema.prisma --no-hints --watch",
-    "dev:prisma:seed": "dotenv -e .env.local -- prisma db seed",
+    "dev:prisma": "prisma generate --schema=src/prisma/schema.prisma --no-hints --watch",
+    "dev:prisma:seed": "prisma db seed",
     "dev:storybook": "storybook dev --quiet --port=6006 --no-open | grep -v -iE 'info|warn' | grep -v '^$'",
-    "dev:studio": "nodemon --watch prisma/schema.prisma --exec 'dotenv -e .env -- prisma studio --schema=src/prisma/schema.prisma --browser none'",
-    "migrate:dev": "dotenv -e .env.local -- prisma migrate deploy --schema=src/prisma/schema.prisma",
+    "dev:studio": "nodemon --watch prisma/schema.prisma --exec 'prisma studio --schema=src/prisma/schema.prisma --browser none'",
+    "migrate:dev": "prisma migrate deploy --schema=src/prisma/schema.prisma",
     "migrate:prod": "prisma migrate deploy --schema=src/prisma/schema.prisma",
-    "prisma:generate": "dotenv -e .env.local -- prisma generate --schema=src/prisma/schema.prisma --no-hints",
+    "prisma:generate": "prisma generate --schema=src/prisma/schema.prisma --no-hints",
     "prisma:watch": "pnpm prisma generate --schema=src/prisma/schema.prisma --watch",
     "prisma:migrate:deploy": "prisma migrate deploy --schema=src/prisma/schema.prisma",
-    "build": "dotenv -e .env.local -- prisma generate --schema=src/prisma/schema.prisma --no-hints && dotenv -e .env.local -- next build",
+    "build": "prisma generate --schema=src/prisma/schema.prisma --no-hints && next build",
     "start": "next start",
     "fix": "pnpm lint:fix && pnpm format",
     "lint": "eslint src --config=config/eslint.config.js",
     "lint:fix": "eslint src --fix --config=config/eslint.config.js && pnpm format",
     "lint:strict": "eslint --max-warnings=0 --config=config/eslint.config.js src",
     "typecheck": "pnpm prisma:generate && tsc --noEmit --incremental false",
-    "test": "dotenv -e .env.test -- vitest run --config=config/vitest.config.ts",
-    "test:watch": "dotenv -e .env.test -- vitest --config=config/vitest.config.ts",
-    "test:coverage": "dotenv -e .env.test -- vitest run --coverage --config=config/vitest.config.ts",
+    "test": "vitest run --config=config/vitest.config.ts",
+    "test:watch": "vitest --config=config/vitest.config.ts",
+    "test:coverage": "vitest run --coverage --config=config/vitest.config.ts",
     "test:ui": "vitest --ui --config=config/vitest.config.ts",
     "e2e": "PORT=3030 playwright test --project=chromium --config=src/e2e/playwright.config.ts",
     "e2e:dev": "PORT=3000 PLAYWRIGHT_IS_TESTING_DEV=true playwright test --project=chromium --config=src/e2e/playwright.config.ts",
@@ -89,7 +89,6 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.2.0",
-    "dotenv-cli": "^7.4.4",
     "lodash": "^4.17.21",
     "lucide-react": "^0.439.0",
     "next": "15.0.3",
@@ -182,7 +181,7 @@
     }
   },
   "prisma": {
-    "seed": "tsx --env-file .env.local src/prisma/seed.ts"
+    "seed": "tsx src/prisma/seed.ts"
   },
   "postcss": {
     "plugins": {
