--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "build": "prisma generate --schema=src/prisma/schema.prisma --no-hints && next build",
     "start": "next start",
     "fix": "pnpm lint:fix && pnpm format",
-    "lint": "eslint src --config=config/eslint.config.js",
-    "lint:fix": "eslint src --fix --config=config/eslint.config.js && pnpm format",
-    "lint:strict": "eslint --max-warnings=0 --config=config/eslint.config.js src",
+    "lint": "eslint --config=config/eslint.config.mjs",
+    "lint:fix": "eslint --config=config/eslint.config.mjs --fix",
+    "lint:strict": "eslint --max-warnings=0 --config=config/eslint.config.mjs",
     "typecheck": "pnpm prisma:generate && tsc --noEmit --incremental false",
     "test": "vitest run --config=config/vitest.config.ts",
     "test:watch": "vitest --config=config/vitest.config.ts",
@@ -133,21 +133,23 @@
     "@types/node": "^22.10.1",
     "@types/qs": "^6.9.17",
     "@types/react": "npm:types-react@19.0.0-rc.1",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.62.0",
+    "@typescript-eslint/eslint-plugin": "^8.18.0",
+    "@typescript-eslint/parser": "^8.18.0",
     "@vitejs/plugin-react": "^4.3.4",
     "@vitest/coverage-v8": "^1.6.0",
     "@vitest/ui": "^1.6.0",
     "autoprefixer": "^10.4.20",
     "concurrently": "^8.2.2",
     "dotenv": "^16.4.7",
-    "eslint": "^8.57.1",
-    "eslint-config-next": "15.0.3",
-    "eslint-config-prettier": "^8.10.0",
-    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "eslint": "^9.17.0",
+    "eslint-config-next": "^15.0.3",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-react": "^7.34.0",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-storybook": "^0.8.0",
-    "eslint-plugin-unused-imports": "^2.0.0",
+    "eslint-plugin-unused-imports": "^3.0.0",
     "execa": "^9.5.2",
+    "globals": "^15.13.0",
     "happy-dom": "^15.11.7",
     "husky": "^7.0.4",
     "lint-staged": "^12.5.0",
@@ -160,14 +162,14 @@
     "prettier-plugin-tailwindcss": "^0.5.14",
     "storybook": "^8.4.7",
     "testcontainers": "^10.16.0",
-    "typescript": "^5.7.2",
+    "typescript": "~5.5.0",
     "vite-tsconfig-paths": "^4.3.2",
     "vitest": "^1.6.0"
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": [
       "pnpm prisma:generate",
-      "eslint --max-warnings=0 --config=config/eslint.config.js",
+      "eslint --max-warnings=0 --config=config/eslint.config.mjs",
       "prettier -w"
     ],
     "**/*.{json,css,scss,md,webmanifest}": [
