--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.1",
   "private": true,
   "scripts": {
-    "preinstall": "pnpm add --global node-gyp sharp",
+    "preinstall": "PNPM_HOME=${PNPM_HOME:-~/.pnpm/store} pnpm add --global node-gyp sharp",
     "docker:dev": "pnpm run docker:down && concurrently \"pnpm run docker:dev:start\" \"pnpm run prisma:watch\" --kill-others --success=first --raw",
     "docker:dev:start": "DOCKER_BUILDKIT=1 COMPOSE_DOCKER_CLI_BUILD=1 docker compose -f src/docker/docker-compose.dev.yml up --build --no-log-prefix",
     "docker:down": "docker-compose -f src/docker/docker-compose.dev.yml down",
