--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.1",
   "private": true,
   "engines": {
-    "node": ">=20.11.0 <=21"
+    "node": ">=20.18.0 <21",
+    "pnpm": "^9.0.0"
   },
   "scripts": {
     "docker:dev": "pnpm run docker:down && concurrently \"pnpm run docker:dev:start\" \"pnpm run prisma:watch\" --kill-others --success=first --raw",
