--- a/src/docker/Dockerfile.prod
+++ b/src/docker/Dockerfile.prod
@@ -1,4 +1,4 @@
-FROM node:20.18.0-slim AS base
+FROM node:20.18.0-slim AS builder
 
 RUN apt-get update && apt-get install -y python3 make g++ && rm -rf /var/lib/apt/lists/*
 WORKDIR /app
@@ -10,7 +10,7 @@ RUN pnpm config set store-dir /home/node/.pnpm-store \
   && pnpm config set node-deprecation-warnings false
 ENV NODE_OPTIONS=--no-warnings
 
-FROM base AS deps
+FROM builder AS deps
 
 # Fetch dependencies first (caching based solely on pnpm-lock.yaml)
 COPY pnpm-lock.yaml ./
@@ -20,7 +20,7 @@ RUN --mount=type=cache,target=/home/node/.pnpm-store pnpm fetch
 COPY package.json ./
 RUN --mount=type=cache,target=/home/node/.pnpm-store pnpm install --frozen-lockfile --offline
 
-FROM base AS build
+FROM builder AS build
 COPY --from=deps /app/node_modules /app/node_modules
 COPY . .
 
@@ -49,6 +49,6 @@ RUN --mount=type=cache,target=/app/.next/cache pnpm prisma:generate
 RUN pnpm exec next telemetry disable
 RUN --mount=type=cache,target=/app/.next/cache pnpm build
 
-FROM base AS final
+FROM builder AS final
 COPY --from=build /app /app
 EXPOSE 3030
