--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -74,14 +74,14 @@ jobs:
           BASE_URL: ${{ steps.check-deployment.outputs.deployment_url }}
 
       - name: Upload Playwright Test Report
-        if: always() && hashFiles('next/__e2e__reports__/**') != ''
+        if: always() && hashFiles('test-results/**') != ''
         id: upload-results
         uses: shallwefootball/s3-upload-action@master
         with:
           aws_key_id: ${{ secrets.AWS_KEY_ID }}
           aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws_bucket: apadana-e2e
-          source_dir: .next/__e2e__reports__
+          source_dir: .test-results
           destination_dir: ${{ github.event.workflow_run.head_sha || github.sha }}
 
       - name: Set details link
