--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -95,9 +95,80 @@ jobs:
           source_dir: test-results
           destination_dir: ${{ github.event.workflow_run.head_sha || github.sha }}
 
-      - name: Set details link
+      - name: Find PR number
+        id: find-pr
         if: always()
         uses: actions/github-script@v7
         with:
           script: |
-            core.setOutput('details_link', ${{ steps.upload-results.outputs.destination_url }});
+            const { owner, repo } = context.repo;
+            const commits = await github.rest.repos.listPullRequestsAssociatedWithCommit({
+              owner,
+              repo,
+              commit_sha: context.sha,
+            });
+
+            if (commits.data.length > 0) {
+              core.setOutput('pr_number', commits.data[0].number);
+            }
+
+      - name: Comment on PR
+        if: always() && steps.find-pr.outputs.pr_number
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const testStatus = '${{ steps.test-run.outcome }}';
+            const baseUrl = 'https://apadana-e2e.s3.amazonaws.com/${{ github.sha }}';
+            const locations = '${{ steps.upload-results.outputs.object_locations }}'.split(',');
+
+            // Format artifacts links
+            const artifactLinks = locations
+              .filter(url => url) // Remove empty strings
+              .map(url => {
+                const fileName = url.split('/').pop();
+                const type = url.includes('video.webm') ? '📹 Video' :
+                            url.includes('trace.zip') ? '🔍 Trace' :
+                            url.includes('.last-run.json') ? '📄 Results' : '📎 Artifact';
+                return `- [${type}](${url})`;
+              })
+              .join('\n');
+
+            const statusEmoji = testStatus === 'success' ? '✅' : '❌';
+            const comment = `## E2E Test Results ${statusEmoji}\n\n` +
+                          `**Status:** ${testStatus}\n` +
+                          `**Commit:** ${context.sha}\n` +
+                          `**Environment:** ${process.env.BASE_URL}\n\n` +
+                          `### Test Artifacts\n${artifactLinks}\n\n` +
+                          `<sub>Updated at: ${new Date().toISOString()}</sub>`;
+
+            // Try to find existing comment
+            const { data: comments } = await github.rest.issues.listComments({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: parseInt(process.env.PR_NUMBER),
+            });
+
+            const botComment = comments.find(comment => 
+              comment.user.type === 'Bot' && 
+              comment.body.includes('E2E Test Results')
+            );
+
+            if (botComment) {
+              // Update existing comment
+              await github.rest.issues.updateComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                comment_id: botComment.id,
+                body: comment
+              });
+            } else {
+              // Create new comment
+              await github.rest.issues.createComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: parseInt(process.env.PR_NUMBER),
+                body: comment
+              });
+            }
+        env:
+          PR_NUMBER: ${{ steps.find-pr.outputs.pr_number }}
