--- a/src/docker/Dockerfile.dev
+++ b/src/docker/Dockerfile.dev
@@ -1,7 +1,7 @@
 # Base stage
 FROM node:20.18.0-slim
 
-RUN apt-get update && apt-get install -y python3 make g++ inotify-tools && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y python3 make g++ inotify-tools wget grep && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
 
