--- a/src/docker/Dockerfile.prod
+++ b/src/docker/Dockerfile.prod
@@ -1,6 +1,6 @@
 FROM node:20.18.0-slim AS builder
 
-RUN apt-get update && apt-get install -y python3 make g++ && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y python3 make g++ wget grep && rm -rf /var/lib/apt/lists/*
 WORKDIR /app
 RUN corepack enable && corepack prepare pnpm@9.9.0 --activate
 
