Work in progress..

--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
     "test:watch": "vitest --config=config/vitest.config.ts",
     "test:coverage": "vitest run --coverage --config=config/vitest.config.ts",
     "test:ui": "vitest --ui --config=config/vitest.config.ts",
-    "e2e": "PORT=3030 playwright test --project=chromium --config=src/e2e/playwright.config.ts",
-    "e2e:dev": "PORT=3000 PLAYWRIGHT_IS_TESTING_DEV=true playwright test --project=chromium --config=src/e2e/playwright.config.ts",
+    "e2e": "BASE_URL=https://prod.apadana.local E2E_TESTING_SECRET=e2e_testing_secret_for_prod playwright test --config=src/e2e/playwright.config.ts",
+    "e2e:dev": "BASE_URL=https://dev.apadana.local E2E_TESTING_SECRET=e2e_testing_secret_for_dev playwright test --config=src/e2e/playwright.config.ts",
     "e2e:ci": "playwright test --config=src/e2e/playwright.config.ts",
-    "e2e:prod": "BASE_URL=https://apadana.app playwright test --project=chromium --config=src/e2e/playwright.config.ts",
+    "e2e:prod": "BASE_URL=https://apadana.app playwright test --config=src/e2e/playwright.config.ts",
     "postbuild": "next-sitemap --config config/next-sitemap.config.js",
     "prepare": "husky install",
     "storybook": "storybook dev -p 6006 --quiet",
