--- a/package.json
+++ b/package.json
@@ -125,6 +125,7 @@
     "@types/node": "^22.10.1",
     "@types/qs": "^6.9.17",
     "@types/react": "npm:types-react@19.0.0-rc.1",
+    "@types/webpack": "^5.28.5",
     "@typescript-eslint/eslint-plugin": "^8.18.0",
     "@typescript-eslint/parser": "^8.18.0",
     "@vitejs/plugin-react": "^4.3.4",
