--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,16 +64,13 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup
         uses: ./.github/actions/setup
+      - run: touch .env.local
       - name: Set up Docker
         uses: docker/setup-buildx-action@v3
       - run: pnpm run test
         env:
           DATABASE_URL: 'postgresql://postgres:postgres@localhost:5432/apadana_test_ci'
           TEST_ENV: 'unit'
-          VERCEL_URL: fake-vercel.com
-          RESEND_API_KEY: re123_fake_RESEND_API_KEY
-          GOOGLE_MAPS_API_KEY: fake_GOOGLE_MAPS_API_KEY
-          E2E_TESTING_SECRET: fake_E2E_TESTING_SECRET
 
   fix-and-commit:
     name: Fix and commit code style
