--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -67,6 +67,59 @@ jobs:
       - name: Install Playwright Browsers
         uses: ./.github/actions/playwright
 
+      - name: Find PR number
+        id: find-pr
+        if: always()
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const { owner, repo } = context.repo;
+            const commits = await github.rest.repos.listPullRequestsAssociatedWithCommit({
+              owner,
+              repo,
+              commit_sha: context.sha,
+            });
+
+            if (commits.data.length > 0) {
+              core.setOutput('pr_number', commits.data[0].number);
+            }
+
+      - name: Update comment with test running state
+        if: always() && steps.find-pr.outputs.pr_number
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const statusEmoji = '🔄';
+            const comment = `### E2E Tests ${statusEmoji}\n\n` +
+              `Running tests against [${deploymentUrl}](${deploymentUrl})...\n\n`;
+
+            const { data: comments } = await github.rest.issues.listComments({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: parseInt(process.env.PR_NUMBER),
+            });
+
+            const botComment = comments.find(comment => 
+              comment.user.type === 'Bot' && 
+              comment.body.includes('E2E Tests')
+            );
+
+            if (botComment) {
+              await github.rest.issues.updateComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                comment_id: botComment.id,
+                body: comment
+              });
+            } else {
+              await github.rest.issues.createComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: parseInt(process.env.PR_NUMBER),
+                body: comment
+              });
+            }
+
       - name: Run E2E Tests
         id: test-run
         run: pnpm run e2e:ci
@@ -86,23 +139,6 @@ jobs:
           source_dir: '.next/playwright-report'
           destination_dir: ${{ github.event.workflow_run.head_sha || github.sha }}
 
-      - name: Find PR number
-        id: find-pr
-        if: always()
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const { owner, repo } = context.repo;
-            const commits = await github.rest.repos.listPullRequestsAssociatedWithCommit({
-              owner,
-              repo,
-              commit_sha: context.sha,
-            });
-
-            if (commits.data.length > 0) {
-              core.setOutput('pr_number', commits.data[0].number);
-            }
-
       - name: Comment on PR
         if: always() && steps.find-pr.outputs.pr_number
         uses: actions/github-script@v7
@@ -117,7 +153,6 @@ jobs:
             const isSuccess = testStatus === 'success'; 
             const statusEmoji = isSuccess ? '✅' : '❌';
 
-            // Shortened comment content
             const comment = `### E2E Tests ${statusEmoji}\n\n` +
               `Ran against [${deploymentUrl}](${deploymentUrl})\n\n` +
               (htmlReportUrl ? `[View Full Report](${htmlReportUrl})\n\n` : '') +
